--- a/CarShop/Views/Cars/SearchForm.cshtml
+++ b/CarShop/Views/Cars/SearchForm.cshtml
@@ -1,42 +1,24 @@
-﻿@model CarShop.Models.Car
-
-<h4>Car</h4>
+﻿<h4>Search for the car of your dreams</h4><br />
+<h4>Type the name of the brand you are looking for</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="SearchForm">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <form asp-action="SearchResults">
+       
             <div class="form-group">
-                <label asp-for="brand" class="control-label"></label>
-                <input asp-for="brand" class="form-control" />
-                <span asp-validation-for="brand" class="text-danger"></span>
+                <label for="brand" class="control-label"></label>
+                <input name="brand" class="form-control" />
+                <span  class="text-danger"></span>
             </div>
+            
             <div class="form-group">
-                <label asp-for="model" class="control-label"></label>
-                <input asp-for="model" class="form-control" />
-                <span asp-validation-for="model" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="price" class="control-label"></label>
-                <input asp-for="price" class="form-control" />
-                <span asp-validation-for="price" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="details" class="control-label"></label>
-                <input asp-for="details" class="form-control" />
-                <span asp-validation-for="details" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="GO" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
