--- a/CarShop/Views/Cars/SearchForm.cshtml
+++ b/CarShop/Views/Cars/SearchForm.cshtml
@@ -6,8 +6,8 @@
         <form asp-action="SearchResults">
        
             <div class="form-group">
-                <label for="brand" class="control-label"></label>
-                <input name="brand" class="form-control" />
+                <label for="searchterm" class="control-label"></label>
+                <input name="searchterm" class="form-control" />
                 <span  class="text-danger"></span>
             </div>
             
