--- a/CarShop/Views/Home/Index.cshtml
+++ b/CarShop/Views/Home/Index.cshtml
@@ -3,6 +3,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <br /><br />
+    <h1 class="display-4">Welcome to the CarShop</h1>
+    <br>
+    <h3>Here you can find the best quality cars</h3>
+    <img src="~/Images/background.png"  width="450" height="450"/>
 </div>
