--- a/CarShop/Views/Cars/About.cshtml
+++ b/CarShop/Views/Cars/About.cshtml
@@ -7,5 +7,14 @@
 <div class="text-center">
     <br /><br />
     <h1 class="display-4">About us </h1>
+    <br /><br />
+    <p> Mobile Orange : +40743939307 </p>
+    <p> Mobile Vodaphone : +40742896353 </p>
+    <br />
+
+    <p> E-mail : lefter.roberto99@yahoo.com </p>
+    <p> G-mail : andone.bogdan@gmail.ro </p>
+    <br />
+    <p> Adress : Street Aleea Rozelor No. 34 , Iasi</p>
     <br>
 </div>
